--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "grapheme-splitter": "^1.0.4",
     "html2canvas": "^1.4.1",
     "jimp": "^1.6.0",
-    "next": "14.2.13",
+    "next": "^14.2.15",
     "quantize": "^1.0.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "tailwind-merge": "^2.5.2"
   },
